--- a/experimental/sidamingzhu/02.ipynb
+++ b/experimental/sidamingzhu/02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/jieba.cache\n",
-      "Loading model cost 0.733 seconds.\n",
-      "Prefix dict has been built succesfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = pd.read_csv(\"./datasets/hongloumeng.csv\")\n",
     "import jieba\n",
@@ -41,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +59,7 @@
        "(120, 5000)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +79,7 @@
        "(120, 1)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,23 +98,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 分层抽样\n",
-    "\n",
-    "# X_train = train_data_features[[i for i in range(0, 120) if i % 4 != 0]]\n",
-    "# Y_train = labels[[i for i in range(0, 120) if i % 4 != 0]]\n",
-    "\n",
-    "# X_test = train_data_features[[i for i in range(0, 120) if i % 4 == 0]]\n",
-    "# Y_test = labels[[i for i in range(0, 120) if i % 4 == 0]]\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(train_data_features, labels, test_size = 0.2)"
+    "from sklearn.model_selection import train_test_split\n",
+    "# train_data_features = train_data_features[0:80]\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(train_data_features, labels, \n",
+    "                                                    test_size = 0.2, stratify=labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_test.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +167,7 @@
        "GaussianNB(priors=None)"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7916666666666666"
+       "0.8333333333333334"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,81 +218,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0])"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y_pred"
+    "from sklearn.model_selection import StratifiedShuffleSplit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sss = StratifiedShuffleSplit(n_splits=10,test_size=0.2)#分成5组，测试比例为0.25，训练比例是0.75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9166666666666666, 0.8333333333333334, 1.0, 0.875, 0.75, 0.8333333333333334, 0.8333333333333334, 0.9583333333333334, 0.875, 0.8333333333333334]\n",
+      "0.8708333333333333\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.72727273, 0.8       , 0.9       , 0.8       , 0.9       ,\n",
-       "       0.77777778, 0.88888889, 0.88888889, 0.77777778, 0.66666667])"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "cross_val_score(gnb, X_train, Y_train, cv = 10, scoring=\"accuracy\")"
+    "scores = []\n",
+    "for train_index, test_index in sss.split(train_data_features, labels):\n",
+    "    X_train, X_test = train_data_features[train_index], train_data_features[test_index]\n",
+    "    Y_train, Y_test = labels[train_index], labels[test_index]\n",
+    "    gnb = GaussianNB()\n",
+    "    gnb.fit(X_train, Y_train)\n",
+    "    Y_pred = gnb.predict(X_test)\n",
+    "    scores.append(accuracy_score(Y_test, Y_pred))\n",
+    "print(scores)\n",
+    "print(np.array(scores).mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 验证"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.8125, 0.875, 0.75, 0.875, 0.75]\n",
+      "0.8125\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels_val = np.array([[0] * 40 + [1] * 40]).reshape(-1 ,1) # 目标值\n",
+    "sss_val = StratifiedShuffleSplit(n_splits=5,test_size=0.2)#分成5组，测试比例为0.25，训练比例是0.75\n",
+    "scores = []\n",
+    "train_data_features_val = train_data_features[0:80]\n",
+    "for train_index, test_index in sss_val.split(train_data_features_val, labels_val):\n",
+    "    X_train, X_test = train_data_features_val[train_index], train_data_features_val[test_index]\n",
+    "    Y_train, Y_test = labels_val[train_index], labels_val[test_index]\n",
+    "    gnb = GaussianNB()\n",
+    "    gnb.fit(X_train, Y_train)\n",
+    "    Y_pred = gnb.predict(X_test)\n",
+    "    scores.append(accuracy_score(Y_test, Y_pred))\n",
+    "print(scores)\n",
+    "print(np.array(scores).mean())"
+   ]
   },
   {
    "cell_type": "code",
