--- a/digit_recognizer/06.ipynb
+++ b/digit_recognizer/06.ipynb
@@ -2,6 +2,320 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 准备工作\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import tensorflow as tf\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 加载数据\n",
+    "train_tf = pd.read_csv(\"./datasets/train.csv\")\n",
+    "test_tf = pd.read_csv(\"./datasets/test.csv\")\n",
+    "train_data = train_tf.drop([\"label\"], axis=1)\n",
+    "train_label = train_tf[\"label\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_label = pd.get_dummies(train_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train,  y_test = train_test_split(train_data, \n",
+    "                                                     train_label, test_size=0.2, \n",
+    "                                                     random_state=42, stratify=train_label)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(33600, 784)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m, n = X_train.shape\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 神经网络参数\n",
+    "learning_rate = 0.001\n",
+    "num_steps = 500\n",
+    "batch_size = 50\n",
+    "display_step = 10\n",
+    "\n",
+    "num_input = 784\n",
+    "num_classes = 10\n",
+    "dropout = 0.75\n",
+    "\n",
+    "# tf 计算图输入\n",
+    "X = tf.placeholder(tf.float32, [None, num_input])\n",
+    "Y = tf.placeholder(tf.float32, [None, num_classes])\n",
+    "keep_prob = tf.placeholder(tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conv2d的封装层\n",
+    "def conv2d(x, W, b, strides=1):\n",
+    "    # strides 步长为1\n",
+    "    x = tf.nn.conv2d(x, W, strides=[1, strides, strides, 1], padding=\"SAME\")\n",
+    "    x = tf.nn.bias_add(x, b)\n",
+    "    return tf.nn.relu(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 池化层的封装\n",
+    "def maxpool2d(x, k=2):  \n",
+    "    # k 池化大小\n",
+    "    result = tf.nn.max_pool(x, ksize=[1, k, k, 1], strides=[1, k, k, 1], \n",
+    "                           padding=\"SAME\")\n",
+    "    return result\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cnn模型结构\n",
+    "def conv_net(x, weights, biases, dropout):\n",
+    "    # input: [batch_size, height, weight, channel]\n",
+    "    x = tf.reshape(x, shape=[-1, 28, 28, 1])\n",
+    "    \n",
+    "    # 卷积层\n",
+    "    conv1 = conv2d(x, weights['wc1'], biases['bc1'])\n",
+    "    conv1 = maxpool2d(conv1, 2)\n",
+    "    \n",
+    "    conv2 = conv2d(conv1, weights['wc2'], biases['bc2'])\n",
+    "    conv2 = maxpool2d(conv2, 2)\n",
+    "    \n",
+    "    # 全连接层\n",
+    "    fc1 = tf.reshape(conv2, [-1, weights['wd1'].get_shape().as_list()[0]])\n",
+    "    fc1 = tf.add(tf.matmul(fc1, weights['wd1']), biases['bd1'])\n",
+    "    fc1 = tf.nn.relu(fc1)\n",
+    "    \n",
+    "    # dropout\n",
+    "    fc1 = tf.nn.dropout(fc1, dropout)\n",
+    "\n",
+    "    out = tf.add(tf.matmul(fc1, weights['out']), biases['out'])\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 权重和偏置\n",
+    "weights = {\n",
+    "     # 5*5 conc, 1 input, 32 outputs\n",
+    "    'wc1':tf.Variable(tf.random_normal([5, 5, 1, 32])),\n",
+    "    'wc2':tf.Variable(tf.random_normal([5, 5, 32, 64])),\n",
+    "    'wd1':tf.Variable(tf.random_normal([7 * 7 * 64, 1024])), \n",
+    "    'out':tf.Variable(tf.random_normal([1024, num_classes]))\n",
+    "}\n",
+    "biases = {\n",
+    "    'bc1':tf.Variable(tf.random_normal([32])),\n",
+    "    'bc2':tf.Variable(tf.random_normal([64])),\n",
+    "    'bd1':tf.Variable(tf.random_normal([1024])),\n",
+    "    'out':tf.Variable(tf.random_normal([num_classes]))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# init = tf.global_variables_initializer()\n",
+    "# with tf.Session() as sess:\n",
+    "#     sess.run(init)\n",
+    "#     a = weights['wd1'].get_shape()\n",
+    "#     print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 输出结果\n",
+    "logits = conv_net(X, weights, biases, keep_prob)\n",
+    "prediction = tf.nn.softmax(logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-13-92e76e33bb53>:2: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 定义损失和优化器\n",
+    "loss_op = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=Y))\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
+    "train_op = optimizer.minimize(loss_op)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 评估模型\n",
+    "correct_pred = tf.equal(tf.argmax(prediction, 1), tf.argmax(Y, 1)) # true or false\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 变量初始化\n",
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "Optimization Finished!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 开始训练\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    for step in range(1):\n",
+    "        index = np.random.randint(m - batch_size)\n",
+    "        batch_x = X_train[index: index + batch_size].values\n",
+    "        batch_y = y_train[index: index + batch_size].values\n",
+    "\n",
+    "#         sess.run(train_op, feed_dict={X:batch_x, Y:batch_y, keep_prob: keep_prob})\n",
+    "#         if step % display_step == 0:\n",
+    "#             # 计算batch 的损失和精确度\n",
+    "#             loss, acc = sess.run([loss_op, accuracy], feed_dict={X: batch_x, Y:batch_y})\n",
+    "#             print(\"Step \" + str(step) + \", Minibatch Loss= \" + \"{:.4f}\".format(loss) + \n",
+    "#                   \", Training Accuracy= \" + \"{:.3f}\".format(acc) )\n",
+    "    print(\"Optimization Finished!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
