--- a/facial-keypoints-detection/01.ipynb
+++ b/facial-keypoints-detection/01.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X_train_df\n",
-    "y_train = y_train_df.values"
+    "X_train = X_train_df / 255\n",
+    "y_train = y_train_df.values / 96"
    ]
   },
   {
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,32 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[68.5886094 , 32.99919317, 29.45230185, ..., 76.93577565,\n",
-       "        53.66044602, 77.89258628],\n",
-       "       [68.80073392, 34.85971108, 28.76514575, ..., 81.09763816,\n",
-       "        51.8791103 , 81.54359092],\n",
-       "       [66.02475   , 40.47675   , 31.50075   , ..., 73.995     ,\n",
-       "        46.584     , 91.089     ],\n",
-       "       ...,\n",
-       "       [67.24939806, 35.8583301 , 29.76093204, ..., 66.26516505,\n",
-       "        47.25530097, 84.17615534],\n",
-       "       [69.7650219 , 38.73740146, 28.71170803, ..., 82.63427737,\n",
-       "        47.55013139, 90.80934307],\n",
-       "       [69.62626415, 32.21859623, 28.74656604, ..., 67.43184906,\n",
-       "        51.00769811, 82.4069434 ]])"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -133,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +144,7 @@
     "    with tf.variable_scope(\"ConvNet\", reuse=reuse):\n",
     "#         X = tf.cast(X, tf.float32)\n",
     "        x = tf.reshape(X, shape=[-1, 96, 96, 1])\n",
-    "        conv1 = tf.layers.conv2d(x, 1, 5, activation=tf.nn.relu)\n",
+    "        conv1 = tf.layers.conv2d(x, 32, 5, activation=tf.nn.relu)\n",
     "        conv1 = tf.layers.max_pooling2d(conv1, 2, 2)\n",
     "        \n",
     "        fc1 = tf.contrib.layers.flatten(conv1)\n",
@@ -172,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +173,8 @@
     "    if mode == tf.estimator.ModeKeys.PREDICT:\n",
     "        return tf.estimator.EstimatorSpec(mode, predictions=pred_classes)\n",
     "    \n",
-    "    loss_op = tf.reduce_mean(tf.pow(logits_train - labels, 2)) / (2 * batch_size)\n",
+    "#     loss_op = tf.reduce_mean(tf.pow(logits_train - labels, 2)) / (2 * batch_size)\n",
+    "    loss_op = tf.sqrt( tf.losses.mean_squared_error(logits_train, labels) )\n",
     "                                                                           \n",
     "    optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "    train_op = optimizer.minimize(loss_op, global_step=tf.train.get_global_step())\n",
@@ -202,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -210,35 +197,35 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpughpwr7r\n",
-      "INFO:tensorflow:Using config: {'_model_dir': '/var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpughpwr7r', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1c4b275a20>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpwc1vu3b5\n",
+      "INFO:tensorflow:Using config: {'_model_dir': '/var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpwc1vu3b5', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1a403946d8>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
       "INFO:tensorflow:Graph was finalized.\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpughpwr7r/model.ckpt.\n",
-      "INFO:tensorflow:loss = 10.283905838000965, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 4.29494\n",
-      "INFO:tensorflow:loss = 1.7812919196743195, step = 101 (23.285 sec)\n",
-      "INFO:tensorflow:global_step/sec: 4.39633\n",
-      "INFO:tensorflow:loss = 0.83830680381953, step = 201 (22.746 sec)\n",
-      "INFO:tensorflow:global_step/sec: 4.40673\n",
-      "INFO:tensorflow:loss = 0.7170061172325949, step = 301 (22.692 sec)\n",
-      "INFO:tensorflow:global_step/sec: 4.24101\n",
-      "INFO:tensorflow:loss = 0.4962204188393246, step = 401 (23.580 sec)\n",
-      "INFO:tensorflow:Saving checkpoints for 500 into /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpughpwr7r/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 0.7303038525215986.\n"
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpwc1vu3b5/model.ckpt.\n",
+      "INFO:tensorflow:loss = 0.6036441, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 0.988952\n",
+      "INFO:tensorflow:loss = 0.14955717, step = 101 (101.118 sec)\n",
+      "INFO:tensorflow:global_step/sec: 1.01114\n",
+      "INFO:tensorflow:loss = 0.09600628, step = 201 (98.901 sec)\n",
+      "INFO:tensorflow:global_step/sec: 0.984738\n",
+      "INFO:tensorflow:loss = 0.07955713, step = 301 (101.547 sec)\n",
+      "INFO:tensorflow:global_step/sec: 0.976174\n",
+      "INFO:tensorflow:loss = 0.06643798, step = 401 (102.441 sec)\n",
+      "INFO:tensorflow:Saving checkpoints for 500 into /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpwc1vu3b5/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 0.05806766.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.estimator.estimator.Estimator at 0x1c4b275898>"
+       "<tensorflow.python.estimator.estimator.Estimator at 0x1a40394940>"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -263,22 +250,22 @@
      "text": [
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Starting evaluation at 2018-05-30-13:25:32\n",
+      "INFO:tensorflow:Starting evaluation at 2018-05-30-16:21:27\n",
       "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpughpwr7r/model.ckpt-500\n",
+      "INFO:tensorflow:Restoring parameters from /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpwc1vu3b5/model.ckpt-500\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Finished evaluation at 2018-05-30-13:25:32\n",
-      "INFO:tensorflow:Saving dict for global step 500: accuracy = 0.0, global_step = 500, loss = 1.983207\n"
+      "INFO:tensorflow:Finished evaluation at 2018-05-30-16:21:28\n",
+      "INFO:tensorflow:Saving dict for global step 500: accuracy = 0.0, global_step = 500, loss = 0.056740664\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.0, 'global_step': 500, 'loss': 1.983207}"
+       "{'accuracy': 0.0, 'global_step': 500, 'loss': 0.056740664}"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +278,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Calling model_fn.\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Graph was finalized.\n",
+      "INFO:tensorflow:Restoring parameters from /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpwc1vu3b5/model.ckpt-500\n",
+      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Done running local_init_op.\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_fn = tf.estimator.inputs.numpy_input_fn(x=test_df / 255, shuffle=False)\n",
+    "y_pred = np.array( list(model.predict(input_fn)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred  = y_pred * 96"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = y_pred.clip(0, 96)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idtable = pd.read_csv(\"./datasets/IdLookupTable.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = train_df.columns[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in idtable.iterrows():\n",
+    "     values.append((\n",
+    "        row['RowId'],\n",
+    "        y_pred[row.ImageId - 1][np.where(cols == row.FeatureName)[0][0]],\n",
+    "        ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -305,84 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Calling model_fn.\n",
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from /var/folders/j0/mlln6qvj2kl42rr7mg80lsxc0000gn/T/tmpughpwr7r/model.ckpt-500\n",
-      "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_fn = tf.estimator.inputs.numpy_input_fn(x=test_df, shuffle=False)\n",
-    "y_pred = np.array( list(model.predict(input_fn)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 333,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idtable = pd.read_csv(\"./datasets/IdLookupTable.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 334,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = train_df.columns[:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 335,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "values = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 336,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, row in idtable.iterrows():\n",
-    "     values.append((\n",
-    "        row['RowId'],\n",
-    "        y_pred[row.ImageId - 1][np.where(cols == row.FeatureName)[0][0]],\n",
-    "        ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
