--- a/competitive-data-science-predict-future-sales/01.ipynb
+++ b/competitive-data-science-predict-future-sales/01.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "4        Волжский ТЦ \"Волга Молл\"        4"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4                40  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4         Аксессуары - PSP                 4"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "4  15.01.2013               0       25     2555     1099.00           1.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "4   4        5     5268"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "4   4             0.5"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "4               0        0       51       128.5           2.0"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "2810654           1.0  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,6 +745,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_features = ['item_id','shop_id' ]\n",
+    "X_train = sale_train_df[selected_features]\n",
+    "Y_train = sale_train_df[\"item_cnt_day\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -752,21 +763,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = test_df[selected_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.preprocessing import StandardScaler\n",
+    "# scaler = StandardScaler()\n",
+    "# X_train = scaler.fit_transform(X_train)\n",
+    "# X_test = scaler.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 进行特征向量化\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "dict_vec = DictVectorizer(sparse=False)\n",
+    "\n",
+    "X_train = dict_vec.fit_transform(X_train.to_dict(orient='record'))\n",
+    "X_test = dict_vec.transform(X_test.to_dict(orient='record'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NoneType"
+       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
+       "             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n",
+       "             max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "             min_impurity_split=None, min_samples_leaf=1,\n",
+       "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "             n_estimators=100, presort='auto', random_state=None,\n",
+       "             subsample=1.0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "rfr = GradientBoostingRegressor()\n",
+    "rfr.fit(X_train, Y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfr_y_predict = rfr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfr_submission = pd.DataFrame({'ID':test_df['ID'], 'item_cnt_month': rfr_y_predict})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>item_cnt_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>214200.000000</td>\n",
+       "      <td>214200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>107099.500000</td>\n",
+       "      <td>1.189295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>61834.358168</td>\n",
+       "      <td>0.308923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.683101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>53549.750000</td>\n",
+       "      <td>1.090492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>107099.500000</td>\n",
+       "      <td>1.131339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>160649.250000</td>\n",
+       "      <td>1.179677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>214199.000000</td>\n",
+       "      <td>4.581892</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  ID  item_cnt_month\n",
+       "count  214200.000000   214200.000000\n",
+       "mean   107099.500000        1.189295\n",
+       "std     61834.358168        0.308923\n",
+       "min         0.000000        0.683101\n",
+       "25%     53549.750000        1.090492\n",
+       "50%    107099.500000        1.131339\n",
+       "75%    160649.250000        1.179677\n",
+       "max    214199.000000        4.581892"
+      ]
+     },
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfr_submission['item_cnt_month'] = np.floor(rfr_submission['item_cnt_month'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>item_cnt_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>214200.000000</td>\n",
+       "      <td>214200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>107099.500000</td>\n",
+       "      <td>1.030616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>61834.358168</td>\n",
+       "      <td>0.279867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>53549.750000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>107099.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>160649.250000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>214199.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  ID  item_cnt_month\n",
+       "count  214200.000000   214200.000000\n",
+       "mean   107099.500000        1.030616\n",
+       "std     61834.358168        0.279867\n",
+       "min         0.000000        0.000000\n",
+       "25%     53549.750000        1.000000\n",
+       "50%    107099.500000        1.000000\n",
+       "75%    160649.250000        1.000000\n",
+       "max    214199.000000        4.000000"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfr_submission.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfr_submission.to_csv('./sub.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
